#18 - Gave z-index to panel bottom title in order to avoid overlapping.

--- a/app/scss/base/_layout.scss
+++ b/app/scss/base/_layout.scss
@@ -78,6 +78,7 @@ body {
         width: 100%;
         position: absolute;
         transform: translate(-50%, -50%);
+        z-index: 1;
         @extend %panel-hpadding;
     }
 }
